--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,7 +8,7 @@
 </div>
 <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
 
-<p>{{ post.text|linebreaksbr }}</p>
+<p>{{ post.text|truncatechars:250 }}</p>
 </div>
 {% endfor %}
 {% endblock %}
