--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,4 +1,27 @@
-.page-header {
+
+body {}
+    font-family: "Roboto", sans-serif;
+    font-size: 17px;
+    background-color: #fdfdfd;
+}
+.shadow {
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+}
+.btn-danger {
+    color: #fff;
+    background-color: #f00000;
+    border-color: #dc281e;
+}
+.masthead {
+    background: #3398E1;
+    height: auto;
+    padding-bottom: 15px;
+    box-shadow: 0 16px 48px #E3E7EB;
+    padding-top: 10px;
+}
+  
+    
+    .page-header {
     background-color: blue;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
