--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
 <head>
-<title>Django Girls blog</title>
+<title>Tom Soppitt's blog</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -12,6 +12,7 @@
             {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
+            <a href="{% url 'cv' %}" class="top-menu"><span>Tom's CV</span></a>
         <h1><a href="/">Tom Soppitt's Blog</a></h1>
         </div>
         <div class="content container">
@@ -22,6 +23,7 @@
         </div>
         </div>
         </div>
+        
         </body>
         
   
