--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,8 +1,8 @@
 
-body {}
+body {
     font-family: "Roboto", sans-serif;
     font-size: 17px;
-    background-color: #fdfdfd;
+    background-color: #b7bfed;
 }
 .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
@@ -20,7 +20,6 @@ body {}
     padding-top: 10px;
 }
   
-    
     .page-header {
     background-color: blue;
     margin-top: 0;
@@ -30,13 +29,24 @@ body {}
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
+    font-family: 'Arial Black', cursive;
     }
     .content {
     margin-left: 40px;
     }
-    h1, h2, h3, h4 {
+    h1, h2 {
     font-family: 'Lobster', cursive;
+    color: blue;
     }
+    h3 {
+        font-family: 'Lobster', cursive;
+        color: blue;
+        } 
+    
+    h4 {
+        font-family: 'Lobster', cursive;
+        color: #405cf7;
+        }
     #bio_left {
         font-size: 75%;
         float: left;
@@ -44,9 +54,9 @@ body {}
     }
     
     #bio_right {
-        font-size: 75%;
+        font-size: 100%;
         float: left;
-        text-align: right;
+        text-align: left;
         width: 350px;
     }
     .date {
@@ -70,4 +80,7 @@ body {}
     .post h2 a, .post h2 a:visited {
     color: #000000;
     }
-    
+    a {
+        color: blue;
+      }
+      
